After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 779802 - Crash when trying to download sources with no network available
Crash when trying to download sources with no network available
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: plugins
unspecified
Other Linux
: Normal normal
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-03-09 11:17 UTC by Krzesimir Nowak
Modified: 2017-03-10 03:22 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Handle the download errors (1.40 KB, patch)
2017-03-09 11:17 UTC, Krzesimir Nowak
committed Details | Review
Do not use g_assert for precondition checks in the public function. (1.11 KB, patch)
2017-03-09 11:18 UTC, Krzesimir Nowak
committed Details | Review

Description Krzesimir Nowak 2017-03-09 11:17:46 UTC
Created attachment 347542 [details] [review]
Handle the download errors

There are two issues here - flatpak plugin tries to open the project [1] even if the GTask returned an error and a public libide function uses g_assert to check preconditions, which abort the application, instead of printing a warning and returning.

Also noticed in the meantime the lack of the error handling when downloading the archive fails, so fixed that too.

Patches follow.
Comment 1 Krzesimir Nowak 2017-03-09 11:18:36 UTC
Created attachment 347543 [details] [review]
Do not use g_assert for precondition checks in the public function.
Comment 2 Christian Hergert 2017-03-10 03:22:49 UTC
Looks good, thanks!