flatpak: Gracefully handle download errors

We should return the error immediately if downloading the archive
failed. Also, we shouldn't try to open a flatpak project if download
failed.

https://bugzilla.gnome.org/show_bug.cgi?id=779802